err/dwhois.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/bson'...
Listing './lib/python3.5/site-packages/certifi'...
Listing './lib/python3.5/site-packages/certifi-2017.11.5.dist-info'...
Listing './lib/python3.5/site-packages/chardet'...
Listing './lib/python3.5/site-packages/chardet/cli'...
Listing './lib/python3.5/site-packages/chardet-3.0.4.dist-info'...
Listing './lib/python3.5/site-packages/dwhois'...
Compiling './lib/python3.5/site-packages/dwhois/cache.py'...
***   File "./lib/python3.5/site-packages/dwhois/cache.py", line 54
    raise KeyError, 'domain'
                  ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/dwhois/query.py'...
***   File "./lib/python3.5/site-packages/dwhois/query.py", line 74
    requests.exceptions.ConnectionError), e:
                                        ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/dwhois/tests'...
Compiling './lib/python3.5/site-packages/dwhois/timing.py'...
***   File "./lib/python3.5/site-packages/dwhois/timing.py", line 85
    raise ValueError, 'Minval greater than maxval (%d > %d)' % (minval, maxval)
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/dwhois/whois.py'...
***   File "./lib/python3.5/site-packages/dwhois/whois.py", line 62
    raise WhoisError, "invalid domain name: %s"%domain
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/dwhois/worker.py'...
***   File "./lib/python3.5/site-packages/dwhois/worker.py", line 93
    requests.exceptions.ConnectionError), e:
                                        ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/dwhois-0.11.egg-info'...
Listing './lib/python3.5/site-packages/gridfs'...
Listing './lib/python3.5/site-packages/idna'...
Listing './lib/python3.5/site-packages/idna-2.6.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pymongo'...
Listing './lib/python3.5/site-packages/pymongo-3.6.0.dist-info'...
Listing './lib/python3.5/site-packages/requests'...
Listing './lib/python3.5/site-packages/requests-2.18.4.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/urllib3'...
Listing './lib/python3.5/site-packages/urllib3/contrib'...
Listing './lib/python3.5/site-packages/urllib3/contrib/_securetransport'...
Listing './lib/python3.5/site-packages/urllib3/packages'...
Listing './lib/python3.5/site-packages/urllib3/packages/backports'...
Listing './lib/python3.5/site-packages/urllib3/packages/ssl_match_hostname'...
Listing './lib/python3.5/site-packages/urllib3/util'...
Listing './lib/python3.5/site-packages/urllib3-1.22.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
